# python_study

./: main.py  pyproject.toml
코딩테스트/: 00_02_코드흐름이해하기_장찬영.ipynb  01_01_여러가지데이터타입연습하기.ipynb  01_02_Pandas로데이터조작하기.ipynb  day.ipynb  파이썬 기초.ipynb
