[project]
name = "machinelearning-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autoviz>=0.1.905",
    "jupyter>=1.1.1",
    "lazypredict",
    "numpy<2",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scikit-surprise>=1.1.4",
    "seaborn>=0.13.2",
]
